# CatStack

./: .gitattributes  .gitignore  CONTRIBUTING.md  CatStack.bat  MeowFarm.bat  README.md  catstack.pyw  install-dev.sh  install.sh  meowfarm.pyw  pyproject.toml  serve.py
.github/workflows/: auto-tag.yml  build-app.yml  build-meowos.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
build-usb/: MIGRATING-FROM-HIVEOS.md  _flash-and-onboard.py  _migrate-hive-to-catstack.py  build-and-release-tnn-miner.sh  build.sh  fix-gpt.sh  install-crucial.sh  install-from-windows.ps1  install-meowos.sh  install-to-nvme.sh  mount-crucial.ps1  mount-flash.ps1  mount-nvme.ps1  phase2.sh  phase3-usb.sh  wsl-build-image.sh  wsl-install.sh
build-usb/autoinstall/: user-data
build-usb/mfarm-files/: config.json  mfarm-agent.py  mfarm-agent.service  mfarm-firstboot.service  mfarm-firstboot.sh  miner-cmd.sh  miner-wrapper.sh
desktop/: CatStack.spec  launcher.py  launcher_cli.py  launcher_gui.py
mfarm/: __init__.py  __main__.py  cli.py  config.py  targets.py
mfarm/commands/: dashboard_cmd.py  deploy.py  fleet.py  group.py  oc.py  rig.py  web_cmd.py
mfarm/dashboard/: app.py  formatters.py  rig_detail.py  rig_table.py
mfarm/db/: connection.py  models.py  schema.py
mfarm/miners/: registry.py
mfarm/router/: __init__.py  base.py  manual.py  store.py  unifi.py
mfarm/ssh/: pool.py
mfarm/web/: agent_api.py  agent_state.py  api.py  app.py  auth.py
mfarm/worker/: deploy.sh  fan_controller_cli  install-vast.sh  mfarm-agent.py  (+17 more)
(+19 files in other folders)
